2008-05-28 Anuradha Ratnaweera <anuradha@taprobane.org>

	* Intuitive behaviour of al kireema after vowels and modifiers.
	* Allow typing rakaransaya or yansaya after a modifier.
	* Validate w, W, R and Y when possible.
	* Efficiency improvements and code cleanup.
	* Version 0.3.3.

2008-05-26 Anuradha Ratnaweera <anuradha@taprobane.org>

	* Initial RPM packaging.

2008-05-25 Anuradha Ratnaweera <anuradha@taprobane.org>

	* One page PDF reference brochure.
	* Properly commit preedits with ang and ah.
	* Autogen fails on error.
	* Version 0.3.2.

2008-05-24 Anuradha Ratnaweera <anuradha@taprobane.org>

	* Use f also for mahaprana conversion.
	* V for ilu and iluu.
	* PDF brochure.

2008-05-23 Anuradha Ratnaweera <anuradha@taprobane.org>

	* Show preedit after updating to make KDE happy.
	* Seperate function to update preedit.
	* R, Y, W and w doesn't depending on previous consonant.
	* Fixed preedit with ZWJ.
	* Version 0.3.1.

2008-05-13 Anuradha Ratnaweera <anuradha@taprobane.org>

	* K&R formatting.

2008-05-12 Anuradha Ratnaweera <anuradha@taprobane.org>

	* HTML documentation.
	* "Q" produces "ah".
	* Use basic vowel if previous vowel doesn't match.

2008-05-09 Anuradha Ratnaweera <anuradha@taprobane.org>

	* Use preedit instead of emulating backspace (Pravin S).
	* Fix algorithm to use preedit.
	* Fix aclocal and automake version dependency (Pravin S).
	* Removed timeout dependancy (Pravin S).
	* Use surrounding text support when available.
	* Usability fixes in the transliteration scheme.
	* Help text suport (Pravin S).
	* Added the complete scheme as help text.
	* Version 0.3.0.

2006-01-30 Anuradha Ratnaweera <anuradha@taprobane.org>

	* Pruned the code by removing parts not relevant.
	* Removed dependancy on surrounding text support.
	* Removed Ctrl+Space for latin input.
	* New image scim-sinhala.png.
	* Version 0.2.0.

2005-09-26 Takuro Ashie <ashie@homa.ne.jp>

	* Version 0.1.0.

2005-09-26 Takuro Ashie <ashie@homa.ne.jp>
