@@ -5,6 +5,7 @@ scim-sayura (0.3.3-1) unstable; urgency=low
   * Allow typing rakaransaya or yansaya after a modifier
   * Validate w, W, R and Y when possible
   * Efficiency improvements and code cleanup
+  * Documentation update
 
  -- Anuradha Ratnaweera <anuradha@taprobane.org>  Mon, 28 May 2008 12:00:00 +0530
 
